Fix: Fooder will no longer squish from Text

--- a/styles/core.css
+++ b/styles/core.css
@@ -18,6 +18,12 @@ body{
 	border-radius: 100%
 }
 
+.card-body{
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 0px;
+}
+
 .navbar{
 	margin-bottom: 15px;
 }
